# wimhf

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: chatbot_arena.json  community_align.json  hh_rlhf.json  pku.json  prism.json  reddit.json  reward_baselines.json  tulu.json
notebooks/: quickstart.ipynb
paper/: dataset_sweep.py
scripts/: run_reward_baselines.py  run_wimhf.py
wimhf/: __init__.py  annotate.py  embedding.py  feature_selection.py  interpretation.py  llm_api.py  llm_local.py  llm_tasks.py  quickstart.py  reward_modeling.py  reward_utils.py  sae.py  utils.py
wimhf/prompts/: abbreviate-concept.txt  interpret-feature-top-pairs.txt  pairwise-annotate-multiconcept.txt  pairwise-annotate-singleconcept.txt
