[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wimhf"
version = "0.1.0"
authors = [
    {name = "Rajiv Movva", email = "rmovva@berkeley.edu"}
]
description = "What's In My Human Feedback (WIMHF): interpreting preference datasets with sparse autoencoders."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/rmovva/wimhf"

[tool.setuptools]
packages = ["wimhf"]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
